--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mini‑Wiki — Web‑App</title>
+  <title>Wiki-Datenbank für TWG</title>
   <style>
     :root{--bg:#f7f8fb;--card:#fff;--accent:#0b74de;--muted:#6b7280}
     *{box-sizing:border-box}
