--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <rect width="24" height="24" rx="6" fill="#0b74de" />
       <text x="12" y="16" font-size="11" fill="white" text-anchor="middle" font-family="Arial">W</text>
     </svg>
-    <h1>Mini‑Wiki</h1>
+    <h1>Wiki-Datenbank für TWG</h1>
     <nav style="margin-left:auto">
       <a href="#" onclick="goTo('home');return false">Start</a> ·
       <a href="#" onclick="goTo('info');return false">Info</a> ·
