--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h1>Wiki-Datenbank für TWG</h1>
     <nav style="margin-left:auto">
       <a href="#" onclick="goTo('home');return false">Start</a> ·
-      <a href="#" onclick="goTo('info');return false">Info</a> ·
+      <a href="#" onclick="goTo('info');return false">Info über die App</a> ·
       <a href="#" onclick="goTo('faq');return false">FAQ</a>
     </nav>
   </header>
