--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Wiki-Datenbank für TWG</title>
+  <title>Wiki</title>
   <style>
     :root{--bg:#f7f8fb;--card:#fff;--accent:#0b74de;--muted:#6b7280}
     *{box-sizing:border-box}
@@ -43,7 +43,7 @@
 
   <main class="container">
     <div id="app"></div>
-    <footer class="meta">Diese Demo speichert Daten lokal im Browser (kein Server). Zum Deploy: GitHub Pages / Vercel.</footer>
+    <footer class="meta">Diese Demo speichert Daten lokal im Browser (kein Server). Weiterentwicklung läuft! Bitte Feedback abgeben. </footer>
   </main>
 
   <script>
@@ -101,7 +101,7 @@
       app.innerHTML = `
         <div class="grid home-grid">
           <div class="card">
-            <h2>Willkommen</h2>
+            <h2>Willkommen /USER </h2>            
             <p class="meta">Wähle zuerst eine Kategorie, dann das Kapitel.</p>
 
             <div style="margin-top:12px;" class="search">
@@ -196,7 +196,13 @@
         <div class="card">
           <a href="#" onclick="goTo('home');return false">← Zurück</a>
           <h2>Info — Was kann die App?</h2>
-          <p>Diese kleine Demo zeigt ein einfaches Wiki/Kompendium. Funktionen:</p>
+          <p>
+          <h3>Vorwort </h3>
+          In der „RECOMMENDED PROCEDURES FOR EVALUATING OCCUPANT INJURY RISK FROM DEPLOYING SIDE AIRBAGS”, prepared by the Side Airbag Out-of-Position Injury Technical Working Group, 
+          im Folgenden kurz “TWG” genannt, werden die verschiedenen OoP Prüf-Positionen beschrieben, dennoch ergeben sich in der täglichen Praxis häufig Fragestellungen, die in der TWG nicht 
+          final oder eindeutig beantwortet werden.
+          Diese Präsentation beschreibt eine abgestimmte Vorgehensweise für das Einsetzen der Dummys in den verschiedenen Prüfpositionen für alle BAUM Projekte.
+          </p>
           <ul>
             <li>Kategorien & Kapitel (statisch per JavaScript)</li>
             <li>Suche, Kapitelansicht mit Text, Diagrammen, Tabellen & Bildern</li>
