--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       const DATA = {
             categories: [
                   { id: 'cat1', title: 'Generelle Vorgehensweise'},
-                  { id: 'cat2', title: 'Sitz-integrierte Seitenairbags' }
+                  { id: 'cat2', title: 'Sitz-integrierte Seitenairbags' },
+                  { id: 'car3', title: 'Tür- oder Seitenteilintegrierte Seitenairbags'}
       ],
             chapters: [
                   {id: 'c0', cat: 'cat1', title: 'Versuchsdurchführung', excerpt: ' ', 
