--- a/index.html
+++ b/index.html
@@ -5144,7 +5144,8 @@
             ],    
                 faq: [
                   {q:'Wie benutze ich die App?', a:'Wähle auf der Startseite eine Kategorie und dann ein Kapitel.'},
-                  {q:'Wo werden Daten gespeichert?', a:'Aktuell lokal im Browser (keine Server).'}
+                  {q:'Wo werden Daten gespeichert?', a:'Aktuell lokal im Browser (keine Server).'},
+                  {q:'Wird die TWG für die 2. Sitzreihe benötigt?', a:'Ja, die TWG ist erforderlich für die 2. Sitzreihe.'}
             ]
       };
 
