--- a/index.html
+++ b/index.html
@@ -5141,7 +5141,18 @@
                               </div>
                         </div>
             `}     
-            ],    
+                  ,{id: 'c_pdf', cat: 'cat6', title: 'TWG – Originaldokument',  excerpt: ' ',  content: `
+                  <h3>TWG – Recommended Procedures</h3>
+                  <p>Das vollständige Originaldokument als PDF:</p>
+
+                  <iframe
+                        src="TWG_ENG.pdf"
+                        style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;"
+                  ></iframe>
+                  `
+                  }
+
+      ],    
                 faq: [
                   {q:'Wie benutze ich die App?', a:'Wähle auf der Startseite eine Kategorie und dann ein Kapitel.'},
                   {q:'Wo werden Daten gespeichert?', a:'Aktuell lokal im Browser (keine Server).'},
@@ -5322,8 +5333,7 @@
                         </div>
 
                   </div>
-                  `;
-                  }
+                  `;                 }
 
 
 
