--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                   { id: 'cat2', title: 'Sitz-integrierte Seitenairbags' },
                   { id: 'cat3', title: 'Tür- oder Seitenteilintegrierte Seitenairbags'},
                   { id: 'cat4', title: 'Fensterairbag'},
-                  { id: 'cat5', title: 'Empfohlene Kamerapositionen' }
+                  { id: 'cat5', title: 'Empfohlene Kamerapositionen' },
+                  {id:'cat6', title: 'TWG Originaldokumente' }
       ],
             chapters: [
                   {id: 'c0', cat: 'cat1', title: 'Versuchsdurchführung', excerpt: ' ', 
@@ -5141,10 +5142,7 @@
                               </div>
                         </div>
             `}     
-                  ,{id: 'c_pdf', cat: 'cat6', title: 'TWG – Originaldokument',  excerpt: ' ',  content: `
-                  <h3>TWG – Recommended Procedures</h3>
-                  <p>Das vollständige Originaldokument als PDF:</p>
-
+                  ,{id: 'c_pdf', cat: 'cat6', title: 'TWG – Englisch',  excerpt: ' ',  content: `
                   <iframe
                         src="TWG_ENG.pdf"
                         style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;"
