--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <main class="container">
       <div id="app"></div>
-      <footer class="meta">Diese Demo speichert Daten lokal im Browser (kein Server). Weiterentwicklung läuft! Bitte Feedback abgeben. </footer>
+      <footer class="meta">Dieses Demo speichert Daten lokal im Browser (kein Server). Nicht für mobile Endgeräte konzipiert. Weiterentwicklung läuft! Bitte Feedback abgeben. </footer>
 </main>
 
 <script>
@@ -5269,23 +5269,6 @@
       }
 
       //Kapitel-Detailansicht und verwaltet gleichzeitig den Verlauf der zuletzt angesehenen Kapitel.
-      /*function renderChapter(chId){
-            const ch = DATA.chapters.find(c=>c.id===chId);
-            if(!ch){ app.innerHTML='<div class="card">Kapitel nicht gefunden</div>'; return }
-            // save recent
-            let recent = JSON.parse(localStorage.getItem('recent')||'[]');
-            recent = [chId, ...recent.filter(x=>x!==chId)].slice(0,6);
-            localStorage.setItem('recent', JSON.stringify(recent));
-
-            app.innerHTML = `
-                  <div class="card">
-                        <a href="#" onclick="goTo('home');return false">← Start</a>
-                        <h2>${ch.title}</h2>
-                        <div class="meta">Kategorie: ${DATA.categories.find(c=>c.id===ch.cat)?.title||'-'}</div>
-                        <div style="margin-top:14px">${ch.content}</div>
-                  </div>
-            `;}*/
-
             function renderChapter(chId){
                   const ch = DATA.chapters.find(c => c.id === chId);
                   if(!ch){
