--- a/index.html
+++ b/index.html
@@ -5142,9 +5142,16 @@
                               </div>
                         </div>
             `}     
-                  ,{id: 'c_pdf', cat: 'cat6', title: 'TWG – Englisch',  excerpt: ' ',  content: `
+                  ,{id: 'c_pdf_1', cat: 'cat6', title: 'TWG – Englisch',  excerpt: ' ',  content: `
                   <iframe
                         src="TWG_ENG.pdf"
+                        style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;"
+                  ></iframe>
+                  `
+                  }
+                  {id: 'c_pdf_2', cat: 'cat6', title: 'TWG – Deutsch',  excerpt: ' ',  content: `
+                  <iframe
+                        src="TWG_DT.pdf"
                         style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;"
                   ></iframe>
                   `
