--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <main class="container">
       <div id="app"></div>
-      <footer class="meta">Dieses Demo speichert Daten lokal im Browser (kein Server). Nicht für mobile Endgeräte konzipiert. Weiterentwicklung läuft! Bitte Feedback abgeben. </footer>
+      <footer class="meta">Dieses Demo speichert keine Daten. Noch nicht für mobile Endgeräte konzipiert. Weiterentwicklung läuft! Bitte Feedback an Thuy RD/KSR abgeben.</footer>
 </main>
 
 <script>
@@ -5340,6 +5340,22 @@
                   </div>
             `;
       }
+
+      /*function renderOverview(){
+            app.innerHTML = `
+                  <div class="card">
+                        <a href="#" onclick="goTo('home');return false">← Zurück</a>
+                        <h2>Info — Was kann die App?</h2>
+                        <p>
+                        <h3>Vorwort </h3>
+                        In der „RECOMMENDED PROCEDURES FOR EVALUATING OCCUPANT INJURY RISK FROM DEPLOYING SIDE AIRBAGS”, prepared by the Side Airbag Out-of-Position Injury Technical Working Group, 
+                        im Folgenden kurz “TWG” genannt, werden die verschiedenen OoP Prüf-Positionen beschrieben, dennoch ergeben sich in der täglichen Praxis häufig Fragestellungen, die in der TWG nicht 
+                        final oder eindeutig beantwortet werden.<br><br>
+                        Diese <mark>App</mark> beschreibt eine abgestimmte Vorgehensweise für das Einsetzen der Dummys in den verschiedenen Prüfpositionen für alle <mark>BAUM</mark> Projekte.
+                        </p>
+                  </div>
+            `;
+      }*/
 
       function renderFAQ(){
             app.innerHTML = `
