--- a/index.html
+++ b/index.html
@@ -5202,8 +5202,8 @@
                         <aside>
                               <div class="card">
                                     <h3>Quick‑Links</h3>
-                                    <div class="meta">Schnellzugriff auf Info, Overview & FAQ</div>
-                                    <div style="margin-top:12px"><button onclick="goTo('info')">Info</button> <button onclick="goTo('overview')">Overview</button></div> <button onclick="goTo('faq')">FAQ</button></div>
+                                    <div class="meta">Schnellzugriff auf Info, Übersicht & FAQ</div>
+                                    <div style="margin-top:12px"><button onclick="goTo('info')">Info</button> <button onclick="goTo('overview')">Übersicht</button></div> <button onclick="goTo('faq')">FAQ</button></div>
                               </div>
 
                               <div class="card" style="margin-top:12px">
@@ -5347,7 +5347,7 @@
                   <div class="card">
                         <a href="#" onclick="goTo('home');return false">← Start</a>
                         <iframe
-                        src="TWG_Overview.pdf"
+                        src="TWG_ Overview.pdf"
                         style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;"
                   ></iframe>
                   </div>
