--- a/index.html
+++ b/index.html
@@ -5343,8 +5343,10 @@
       }
 
       function renderOverview(){
-            <div class="image-image-block_55">
-                  <img width="1741" height="1014" alt="overview" src="https://github.com/user-attachments/assets/1c0b9f49-9b66-45d8-b0ed-2dfafbbfbc2b" />          
+            <div class="container_55">
+                  <div class="image-image-block_55">
+                        <img width="1741" height="1014" alt="overview" src="https://github.com/user-attachments/assets/1c0b9f49-9b66-45d8-b0ed-2dfafbbfbc2b" />          
+                  </div>
             </div>
             
             app.innerHTML = `
