--- a/index.html
+++ b/index.html
@@ -5347,8 +5347,8 @@
                   
                   <div class="card">
                         <a href="#" onclick="goTo('home');return false">← Start</a>
-                        <div class="image-block-53">
-                        <img width="174" height="101" alt="overview" src="https://github.com/user-attachments/assets/1c0b9f49-9b66-45d8-b0ed-2dfafbbfbc2b" />
+                        <div class="image-blockS-53">
+                        <img width="550" height="300" alt="overview" src="https://github.com/user-attachments/assets/1c0b9f49-9b66-45d8-b0ed-2dfafbbfbc2b" />
                         </div>
                         <iframe
                         src="TWG_ Overview.pdf"
