--- a/index.html
+++ b/index.html
@@ -5350,6 +5350,7 @@
                         <div class="image-blockS-53">
                         <img width="920" height="600" alt="overview" src="https://github.com/user-attachments/assets/1c0b9f49-9b66-45d8-b0ed-2dfafbbfbc2b" />
                         </div>
+                        <h3>Auszug aus der TWG:</h3>
                         <iframe
                         src="TWG_ Overview.pdf"
                         style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;"
